{
    "name": "FirstVersionControls",
    "maps": [
        {
            "name": "FreeMovement",
            "id": "1c06ef7f-e538-43e2-a293-f9160d65d458",
            "actions": [
                {
                    "name": "XZ Movement",
                    "type": "Value",
                    "id": "73cf6aaa-7931-48db-a037-6b0fbd8551d1",
                    "expectedControlType": "Vector2",
                    "processors": "StickDeadzone(min=0.15,max=0.9)",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Y Movement",
                    "type": "PassThrough",
                    "id": "83b3335e-a3f9-48cb-9285-0b566caf0d16",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Camera Stick",
                    "type": "Value",
                    "id": "d995fb88-d497-447b-b3ef-f71dbc626228",
                    "expectedControlType": "Vector2",
                    "processors": "StickDeadzone(min=0.15,max=0.9)",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "SnapToHorizon",
                    "type": "Button",
                    "id": "a4dcadb0-e04f-46f1-a764-3fa0cc17174c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "LockOnCommand",
                    "type": "Button",
                    "id": "543e3563-54da-414a-bf80-8599f4202354",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Dash",
                    "type": "Button",
                    "id": "c028584e-3237-47e4-94cb-887e6697a443",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "4a00971e-4552-4afb-aa15-f3c4d267e49c",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "XZ Movement",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8476cd04-57d5-47a7-b8d0-63fabdc759bf",
                    "path": "<Gamepad>/rightStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Camera Stick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b4f8f615-2afc-44a9-8234-3c047c4047e7",
                    "path": "<Gamepad>/leftStickPress",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SnapToHorizon",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "075736a5-07c7-4445-85a6-2d01d7b461b2",
                    "path": "<Gamepad>/rightStickPress",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LockOnCommand",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "1D Axis",
                    "id": "8db73cc8-2607-42e6-a897-6393a5c226f0",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Y Movement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "d34877c0-22a8-42b6-90ef-d65f5fc44cf7",
                    "path": "<Gamepad>/leftTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Y Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "5d3b591a-790b-48e7-8890-1bf97b4db916",
                    "path": "<Gamepad>/leftShoulder",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Y Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "3ee71fb1-3b9a-473e-8201-0db1ae9e5a6e",
                    "path": "<Gamepad>/buttonEast",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Dash",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}